--- a/apps/web/src/components/Nav/nav.css
+++ b/apps/web/src/components/Nav/nav.css
@@ -1,13 +1,13 @@
 
 
 :root {
-    --bg-color1: #411700;
-    --bg-color2: #984700;
-    --bg-color3: #ffe0bc;
+    --bg-color1: #5E503F;
+    --bg-color2: #A9927D;
+    --highl-color1: #22333B;
 
-    --txt-color1:#101010;
-    --txt-color2:#f4f4f4;
-    --txt-color3:#f09558;
+    --txt-color1:#0A0908;
+    --txt-color2:#F2F4F3;
+    
 }
 .flex{
    display: flex;
@@ -17,30 +17,46 @@
 
 
 .nav_container{
-    height: 100px;
+    position:sticky;
+    top: 0;
+    height: 80px;
     width: 100%;
-    background-color: var(--bg-color3) ;
+    background-color: var(--bg-color2) ;
     /* class flex used */
     justify-content: space-between;
-    padding: 5px 30px;
+    padding: 20px 30px;
 }
 
 .logo{
-    height: 70px;
-    width: 70px;
+    margin: 0 4px;
+    height: 40px;
+    width: 60px;
+    background-color: #5E503F;
+    border: 5px solid var(--txt-color1);
+    
+}
+
+.logotxt{
+    font-size:4rem;
+    font-weight: 800;
+    font-style: italic;
 }
 
 .navopt_container{
      /* class flex used */
 }
 .navopt{
-    background-color: var(--bg-color2);
-    padding: 10px 20px;
+    background-color: var(--bg-color1);
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
     margin: 0 10px;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    font-weight: 600;
+    font-size: 2rem;
+    border-radius: 50%;
+    font-weight: 900;
     color: var(--txt-color2);
+    /* flex applied */
+    justify-content: center;
 }
 
 
