--- a/apps/web/src/components/Nav/nav.css
+++ b/apps/web/src/components/Nav/nav.css
@@ -28,16 +28,17 @@
 }
 
 .logo{
-    margin: 0 4px;
-    height: 60px;
-    width: 60px;
+    margin: 0 -8px;
+    height: 50px;
+    width: 50px;
     
 }
 
 .logotxt{
     font-size:4rem;
-    font-weight: 800;
+    font-weight: 900;
     font-style: italic;
+    color: var(--bg-color1);
 }
 
 .navopt_container{
@@ -55,6 +56,10 @@
     color: var(--txt-color2);
     /* flex applied */
     justify-content: center;
+}
+.navopt_img{
+    height: 30px;
+    width: 30px;
 }
 
 
