--- a/apps/web/src/components/Nav/nav.css
+++ b/apps/web/src/components/Nav/nav.css
@@ -4,7 +4,6 @@
     --bg-color1: #5E503F;
     --bg-color2: #A9927D;
     --highl-color1: #22333B;
-
     --txt-color1:#0A0908;
     --txt-color2:#F2F4F3;
     
@@ -14,24 +13,33 @@
    align-items:center;
 }
 
+.dividerthin{
+    height: 3px;
+    width: 100%;
+    background-color: var(--bg-color1);
+}
+.sticky{
+    position:sticky;
+    top: 0;
+}
+
 
 
 .nav_container{
-    position:sticky;
-    top: 0;
+    
     height: 80px;
     width: 100%;
     background-color: var(--bg-color2) ;
     /* class flex used */
     justify-content: space-between;
     padding: 20px 30px;
+
 }
 
 .logo{
-    margin: 0 -8px;
+    margin: 0 -6px;
     height: 50px;
     width: 50px;
-    
 }
 
 .logotxt{
