--- a/apps/web/src/components/Nav/nav.css
+++ b/apps/web/src/components/Nav/nav.css
@@ -32,7 +32,7 @@
 
 .nav_container{
     z-index: 101;
-    height: 80px;
+    height: 10vh;
     width: 100%;
     background-color: var(--bg-color2) ;
     /* sticky class used */
