--- a/apps/web/src/components/auth/auth.css
+++ b/apps/web/src/components/auth/auth.css
@@ -15,22 +15,23 @@
 .wraper {
     background-color: var(--bg-color2);
     width: 100%;
-    height:100vh;
+    height:90vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .sectionL{
     width: 50%;
-    height: 100vh;
+    height: 100%;
     border: solid 1px red;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     flex-direction: column;
 }
 .sectionR{
     width: 50%;
-    height: 100vh;
+    height: 100%;
     border: solid 1px rgb(0, 26, 255);
 }
