--- a/apps/web/src/components/auth/auth.css
+++ b/apps/web/src/components/auth/auth.css
@@ -24,7 +24,6 @@
 .sectionL{
     width: 50%;
     height: 100%;
-    border: solid 1px red;
     display: flex;
     align-items: center;
     justify-content:center;
@@ -33,5 +32,14 @@
 .sectionR{
     width: 50%;
     height: 100%;
-    border: solid 1px rgb(0, 26, 255);
+    
+    background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.03),
+      rgba(0, 0, 0, 0.507)
+    ),
+    url(../../assets/signinbanner.jpg);  
+    background-size: cover;
+    
+    
 }
