Dynamic route and infinite scrolling of categories

--- a/apps/web/src/pages/Catalog/catalog.css
+++ b/apps/web/src/pages/Catalog/catalog.css
@@ -5,3 +5,13 @@
     background: var(--bg-color1);
 
 }
+
+.categories{
+    display:flex;
+    flex-wrap:wrap
+}
+
+.category{
+    width:25%;
+    height:100px
+}
