login page and catagories card worked on

--- a/apps/web/src/components/SignUp_Login/Cstyle.css
+++ b/apps/web/src/components/SignUp_Login/Cstyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins: wght@200;300;400; 500; 600; 700; 800;900&display-swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins: wght@200;300;400; 500; 600; 700; 800;900&display-swap'); */
 
 * {
     margin: 0;
@@ -7,14 +7,23 @@
 
     box-sizing: border-box;
 
-    font-family: 'Poppins', sans-serif;
+   
 
 }
+:root {
+    --bg-color1: #5E503F;
+    --bg-color2: #A9927D;
 
+    --highl-color1: #92374D; 
+     --highl-color2: #0E7C7B; /* #0B6765 */
+
+    --txt-color1:#0A0908;
+    --txt-color2:#F2F4F3;
+    
+}
 .section {
     position: relative;
-
-    min-height: 100vh;
+    min-height: 90vh;
 
     background: #e1d0b6;
 
@@ -26,11 +35,11 @@
 
     padding: 20px;
 
-    transition: 0.5s;
+    transition: 0.8s;
 }
 
 .section.active {
-    background: #557085;
+    background: var(--bg-color2);
 }
 
 .section .container {
@@ -43,7 +52,7 @@
 
     background: #fff;
 
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.447) 0px 20px 60px -10px;
     overflow: hidden;
 
 }
@@ -94,7 +103,7 @@
 
     height: 100%;
 
-    background: rgb(219, 224, 224);
+    background: rgb(215, 215, 215);
 
     display: flex;
 
@@ -108,19 +117,19 @@
 }
 
 .section .container .user .formBx h2 {
-    font-size: 18px;
+    font-size: 1.4rem;
 
-    font-weight: 600;
+    font-weight: 400;
 
     text-transform: uppercase;
 
     Letter-spacing: 2px;
 
-    text-align: center;
+    text-align: left;
 
     width: 100%;
 
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 
     color: #555;
 }
@@ -128,7 +137,7 @@
 .section .container .user .formBx input {
     width: 100%;
 
-    padding: 10px;
+    padding: 8px 15px;
 
     background: #f5f5f5;
 
@@ -140,7 +149,7 @@
 
     box-shadow: none;
 
-    font-size: 14px;
+    font-size: 16px;
 
     margin: 8px 0;
 
@@ -151,18 +160,18 @@
 
 .section .container .user .formBx input[type="submit"] {
     max-width: 100px;
-    background: #677eff;
+    background: var(--bg-color1);
+    padding: 8px 0;
     color: #fff;
     cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    Letter-spacing: 1px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-radius: 1px;
     transition: 0.5s;
 }
 
-.section .container .user .signupBx .formBx input[type="submit"] {
-    background: #e73e49;
-}
+
+
 
 .section .container .user .formBx .signup {
     position: relative;
@@ -181,12 +190,20 @@
 
 }
 
-.section .container .user .formBx .signup a {
-    font-weight: 600;
 
+.section .container .user .formBx .signup span {
+    font-weight: 400;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.5s ease-in-out;
+    color: var(--bg-color1);
+}
+.section .container .user .formBx .signup span:hover {
+    font-weight: 600;
+    cursor: pointer;
     text-decoration: none;
 
-    color: #577eff;
+    color: var(--highl-color2);
 }
 
 
@@ -231,4 +248,13 @@
 
 .section .container.active .signinBx .formBx {
     top: -100%;
+}
+
+
+.radiocontainer{
+    width: 100%;
+    
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
