--- a/apps/web/src/components/Products/Product.css
+++ b/apps/web/src/components/Products/Product.css
@@ -1,9 +1,5 @@
-
-.productCard{
-    height: 200px;
-    width: 200px
-}
-.productCardImage{
-    height: 100px;
-    width:100px;
+.section{
+    margin-top: 0;
+    align-items:start;
+    background: white;
 }
