--- a/apps/web/src/pages/Catalog/catalog.css
+++ b/apps/web/src/pages/Catalog/catalog.css
@@ -7,11 +7,20 @@
 }
 
 .categories{
+    margin: 20px;
+    background: rgb(232, 208, 128);
     display:flex;
     flex-wrap:wrap
 }
 
 .category{
+    padding: 20px;
+    align-self: center;
     width:25%;
     height:100px
+    
+}
+.card{
+    padding: 30px;
+    color: orange;
 }
