--- a/apps/web/src/components/Products/Product.css
+++ b/apps/web/src/components/Products/Product.css
@@ -1,24 +1,79 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Fira Sans', sans-serif;
+}
+:root {
+    --bg-color1: #5E503F;
+    --bg-color2: #A9927D;
+
+    --highl-color1: #92374D; 
+     --highl-color2: #0E7C7B; /* #0B6765 */
+
+    --txt-color1:#0A0908;
+    --txt-color2:#F2F4F3;
+    
+}
 .section{
     height:50vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding:0;
-    background: rgb(204, 71, 71);
+   
 }
 .card{
-    background: rgb(255, 212, 212);
-    padding: 20px;
-    margin: 0px 0px;
+    width: 100%;
+    max-width: 400px;
+    border: 2px solid var(--bg-color1);
+    padding: 0px;
+    margin: 20px 8px ;
+    box-shadow: rgba(0, 0, 0, 0.735) 0px 10px 20px -10px;
+    
 }
 .cardbody{
-    background: rgb(220, 159, 159);
-    padding: 20px 5px;
+    background: rgb(220, 188, 159);
+    border-radius: 0 0 5px 5px;
+    padding: 10px 5px;
 }
 .imagecard{
-    height: 300px;
+    /* height: 300px; */
+    
+    /* height:80p; */
+    z-index: 0;
+    width: 100%;
+    height: 200px;
     background-size: cover;
+    border-radius:  5px 5px 0 0;
+    border-bottom: 3px solid var(--bg-color1);
+
+
+}
+.cartbutton{
+    background: #5E503F;
+    border:2px solid var(--bg-color1);
+    margin-bottom: -5px;
+    margin-right: 10px;
+    box-shadow: rgba(0, 0, 0, 0.735) 0px 10px 20px -10px;
+}
+.cartbutton :hover{
+    
+    border:2px solid var(--bg-color2);
+
+    margin-bottom: -5px;
+    margin-right: 10px;
+}
+.cardtitle{
+    font-weight:500;
+    min-height: 40px;
 }
 .imagdesc{
-    background:red;
+    /* background:red; */
     height:100px;
+    overflow:hidden;
+    overflow-y: scroll;
+    font-weight: 300;
+
+
 }
