--- a/apps/web/src/components/Products/style_product.css
+++ b/apps/web/src/components/Products/style_product.css
@@ -1,10 +1,22 @@
 .conatainer{
+  
+    margin: 0;
+    padding: 0;
+
 
 }
 .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 20vh;
+    margin: 0 0px;
+    background-color: rgb(208, 189, 172);
 }
-.item{
-    margin-top: 5vh;
+.item{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
+
 }
