--- a/apps/web/src/components/Cart/style_cart.css
+++ b/apps/web/src/components/Cart/style_cart.css
@@ -1,13 +1,10 @@
-.container{
-    margin: 0;
-    border: 0;
-}
-.card{
+
+/* .card{
     width: 70%;
     margin-left: 0;
     margin-top: 30px;
     background:rgb(252, 249, 244);
-}
+} */
 .price{
     width: 38%;
     height: 75%;
