--- a/apps/web/src/pages/Catalog/catalog.css
+++ b/apps/web/src/pages/Catalog/catalog.css
@@ -10,7 +10,8 @@
     margin: 20px;
     background: rgb(232, 208, 128);
     display:flex;
-    flex-wrap:wrap
+    flex-wrap:wrap;
+    height: auto;
 }
 
 .category{
