--- a/apps/web/src/components/Hero/hero.css
+++ b/apps/web/src/components/Hero/hero.css
@@ -100,16 +100,16 @@
 
 .header2{
     
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 600;
     color: var(--bg-color2);
     text-align: left;
-    margin: 5px 0;
+    /* margin: 5px 0; */
 }
 
 .subtext2{
     
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 300;
     line-height: 2.5rem;
     text-align: left;
