--- a/apps/web/src/components/Cart/style_cart.css
+++ b/apps/web/src/components/Cart/style_cart.css
@@ -1,30 +1,45 @@
-
-/* .card{
-    width: 70%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Fira Sans', sans-serif;
+    color: var(--txt-color1);
+}
+.card{
+   
     margin-left: 0;
     margin-top: 30px;
     background:rgb(252, 249, 244);
-} */
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.containercart{
+    background: var(--bg-color2);
+    display: flex;
+    align-items: flex-start;
+    justify-content:space-around;
+    
+}
+.flexC{
+ 
+}
 .price{
     width: 38%;
-    height: 75%;
-    left: 950px;
-    position: fixed;
-    align-content: center;
-    border-style:solid;
-    border-color: rgb(228, 228, 228);
-    border-radius: 10px;    
+    height: 60vh;
+    margin: 10vh 0;
+    border: 3px solid var(--bg-color1);
+    border-radius: 2px;  
+    background-color: #baa788;  
 }
 h2{
     text-align: center;
-    color: rgb(96, 92, 92);
     padding-top: 15px ;
     padding-left: 10px;
+    font-weight: 700;
 }
 hr{
-    position: absolute;
-    left: 20px;
-    width:90%;
+   
     padding-top: 0;
     margin-top: 0;
     align-self: center;
@@ -36,20 +51,30 @@ tr{
     margin: 50px;
 }
 td{
-    color: rgb(96, 92, 92);
+    
     padding: 25px;
 }
 .Btn{
-    background:rgb(148, 108, 33);
+    background:var(--bg-color1);
     color: white;
-    height: 50px;
+    margin-top: 10px;
+   margin-left: 70px;
     padding: 15px;
-    border-color: white;
-    border-radius: 10px;
-    position: absolute;
-    top: 400px;
-    left: 35%;
+    font-weight: 400;
+    font-size: 1.2rem;
+    border: none;
+    transition: all 0.5s ease-in-out;
 }
 .Btn:hover{
-    background:  rgb(206, 135, 3);
+    background: #443316;
+    
+}
+.imagecard{
+    height: 200px;
+    background-size: cover;
+}
+.card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
