--- a/apps/web/src/pages/Catalog/catalog.css
+++ b/apps/web/src/pages/Catalog/catalog.css
@@ -1,25 +1,35 @@
 .catalogue_container{
     width: 100%;
-    height: 50vh;
+   
    
     background: var(--bg-color1);
 
 }
 
 .categories{
-    
-    
+    height: 150vh;
+    background: var(--bg-color2);
     display:flex;
-
-
     flex-wrap:wrap
 }
 
 .category{
-    padding: 20px;
-    align-self: center;
+    margin-top: 5vh;;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     width:25%;
-    height:100px
+    
     
 } 
+
+.carddesign{
+    height:200px;
+    border: 1px solid black;
+    width:90%;
+    background: var(--bg-color1);
+    border-radius: 2px;
+    border: 2px solid rgb(89, 58, 17);
+}
  
