--- a/apps/web/src/pages/Catalog/catalog.css
+++ b/apps/web/src/pages/Catalog/catalog.css
@@ -7,7 +7,7 @@
 }
 
 .categories{
-    height: 150vh;
+    height: 180vh;
     background: var(--bg-color2);
     display:flex;
     flex-wrap:wrap
@@ -18,7 +18,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
     width:25%;
     
     
@@ -30,6 +29,23 @@
     width:90%;
     background: var(--bg-color1);
     border-radius: 2px;
-    border: 2px solid rgb(89, 58, 17);
+    border: 4px solid rgb(59, 42, 19);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
+    box-shadow: rgba(0, 0, 0, 0.898) 0px 20px 30px -20px;
+}
+.carddesign:hover{
+    box-shadow: rgba(0, 0, 0, 0.898) 0px 20px 30px -15px;
+    scale: 0.98;
+}
+
+.cardtextbox{
+    color: aliceblue;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.7rem;
+
 }
  
