--- a/apps/web/src/components/Nav/nav.css
+++ b/apps/web/src/components/Nav/nav.css
@@ -40,8 +40,10 @@
 .logo{
 
     margin: 0 -6px;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    padding: 5px
 }
 
 .logotxt{
