--- a/apps/web/src/components/Footer/footer_style.css
+++ b/apps/web/src/components/Footer/footer_style.css
@@ -1,73 +1,100 @@
-p{
-    line-height: 2;
-}
-a{
-    color: #f8f7f7;
-    margin: 30px 20px;
-
-  }
-  h2{
-    font-size: 1.5rem;
-    color:  #786106;
-    font-weight: normal;
-    font-weight: bold;
-    margin-top: 50px;
-}
-h3{
-    color:  #765f14;
-}
-  .contact-me{
-    text-align: center;
-  }
-  .Contact_btn {
-    background: var(--bg-color1);
-    /* background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-    background-image: linear-gradient(to bottom, #11CDD4, #11999E); */
-    -webkit-border-radius: 12;
-    -moz-border-radius: 12;
-    border-radius: 12px;
-    font-family: 'Montserrat', sans-serif;
-    color:white;
-    font-size: 20px;
-    padding: 5px 10px 5px 10px;
-    text-decoration: none;
-    margin-bottom: 50px;
-  }
+.footer{
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  position: relative;
   
-  .Contact_btn:hover {
-    background: #9b7c0d;
-    /* background-image: -moz-linear-gradient(top, #6b560c, #6b560c);
-    background-image: -webkit-linear-gradient(top, #6b560c, #6b560c);
-    background-image: -ms-linear-gradient(top, #6b560c, #6b560c);
-    background-image: -o-linear-gradient(top, #6b560c, #6b560c);
-    background-image: linear-gradient(to bottom, #6b560c, #6b560c); */
-    text-decoration: none;
-  }
-  .name{
-    padding-bottom: 8px;
-  }
-  .footer-link1:hover{
-    color: #f3ededf2;
-  }
-  .footer-link2:hover{
-    color: #f3ededf2;
-  }
-  .footer-link3:hover{
-    color: #f3ededf2;
-  }
- .bottom-container{
-    z-index: 101;
-    width: 100%;
-    background-color: var(--bg-color1) ;
-    justify-content: space-between;
-    position:static;
-    top: 0;
-    padding-top: 30px;
-    padding-bottom: 5px;
-    margin-top: 20px;
-   color: #ffffff;
-   text-align: center;
-  }
+  background:#111;
+  color:#fff;
+}
+p{
+  color: #fff;
+}
+.footer-content{
+  margin:0;
+  display:flex;
+  align-items:center;
+  width:100%;
+  padding: 20px 0;
+  justify-content: center;
+  color:#fff;
+  flex-direction: column;
+  text-align: center;
+  background-color: var(--bg-color3);
+}
+
+.footer-bottom{
+  background: #000;
+  width: 100vw;
+  text-align: center;
+}
+
+
+
+.footer-content h3{
+  font-size: 22px;
+  font-weight:400;
+  color:  #fff
+  
+}
+
+.footer-content p{
+  max-width: 500px;
+  line-height: 28px;
+  font-size:14px;
+
+}
+.github{ 
+  width:20px;
+  height: 20px;
+}
+.socials{
+  list-style: none;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  margin:1rem 0 3rem 0;
+
+}
+.socials li{
+  margin: 0 10px;
+}
+.socials a{
+  text-decoration: none;
+  color: #fff;
+
+}
+.socials a i{
+  font-size:1.1rem;
+}
+.socials a:hover i{
+  color:aqua;
+}
+
+
+.footer-bottom p{
+  font-size:14px;
+  word-spacing:2px;
+  text-transform:capitalize;
+
+}
+.footer-bottom span{
+  
+  text-transform: uppercase;
+  opacity: 1;
+  font-weight: 200;
+}
+.footer-bottom span a{
+  text-decoration: none;
+  color: #fff;
+  opacity: 1;
+}
+.footer-bottom span a:hover{
+  color: #fff;
+  opacity: .7;
+}
+
+a:visited{
+  color: #fff;
+}
