--- a/apps/web/src/components/Hero/hero.css
+++ b/apps/web/src/components/Hero/hero.css
@@ -38,8 +38,9 @@
 /*newcode*/
 
 .section1{
+    margin: 0px;
     width: 100%;
-    height: 27vh;
+    height: vh;
     background: var(--bg-color1);
 
 /*newcode*/
@@ -56,7 +57,7 @@
     font-size:2.5rem;
     font-weight:600;
     font-style: italic;
-    margin:5px 0 ;
+    margin: 0 ;
 
 }
 .section1 .subtxt{
