--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -11,6 +11,7 @@
 :root {
     --bg-color1: #5E503F;
     --bg-color2: #A9927D;
+    --bg-color3: #411900;
 
     --highl-color1: #92374D; 
      --highl-color2: #0E7C7B; /* #0B6765 */
