--- a/apps/web/src/components/Cart/style_cart.css
+++ b/apps/web/src/components/Cart/style_cart.css
@@ -21,15 +21,15 @@
     justify-content:space-around;
     
 }
-.flexC{
- 
-}
-.price{
-    width: 38%;
-    height: 60vh;
-    margin: 10vh 0;
+
+.price_container{
+    width: 50%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
     border: 3px solid var(--bg-color1);
-    border-radius: 2px;  
+    border-radius: 2px; 
+    
     background-color: #baa788;  
 }
 h2{
@@ -44,21 +44,18 @@ hr{
     margin-top: 0;
     align-self: center;
 }
-table{
-    margin: 50px;
-}
-tr{
-    margin: 50px;
-}
-td{
-    
-    padding: 25px;
+.totals{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    font-weight: 700;
+
 }
 .Btn{
     background:var(--bg-color1);
     color: white;
     margin-top: 10px;
-   margin-left: 70px;
+   
     padding: 15px;
     font-weight: 400;
     font-size: 1.2rem;
